Make text in tracker shorter

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "short-number": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
