--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "orientation": "portrait",
     "icon": "./assets/cube.png",
     "splash": {
-      "image": "./assets/favicon.png",
+      "image": "./assets/favicon_smaller_1.png",
       "resizeMode": "contain",
       "backgroundColor": "#00171F"
     },
