--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.7.1",
     "expo": "^38.0.9",
     "expo-image-picker": "~8.3.0",
+    "expo-media-library": "~8.2.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
