--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-daterange-picker": "^1.3.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-lightbox": "^0.8.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
