--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
     },
     "android": {
       "package": "fr.simon.yip",
-      "versionCode": 1
+      "versionCode": 1,
+      "enableDangerousExperimentalLeanBuilds" : true
     },
     "web": {
       "favicon": "./assets/favicon.png"
