--- a/app.json
+++ b/app.json
@@ -5,9 +5,9 @@
     "slug": "yip",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/cube.png",
+    "icon": "./assets/icon-1.png",
     "splash": {
-      "image": "./assets/favicon_smaller_1.png",
+      "image": "./assets/splash-1.png",
       "resizeMode": "contain",
       "backgroundColor": "#00171F"
     },
@@ -22,7 +22,7 @@
     },
     "android": {
       "package": "fr.simon.yip",
-      "versionCode": 6,
+      "versionCode": 7,
       "enableDangerousExperimentalLeanBuilds" : true
     },
     "web": {
