--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "^38.0.9",
     "expo-image-picker": "~8.3.0",
     "expo-media-library": "~8.2.1",
+    "expo-splash-screen": "^0.3.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
