--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-lightbox": "^0.8.1",
