--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "^38.0.9",
+    "expo-analytics-segment": "~8.2.1",
     "expo-image-picker": "~8.3.0",
     "expo-media-library": "~8.2.1",
     "expo-splash-screen": "^0.3.1",
