--- a/package.json
+++ b/package.json
@@ -8,36 +8,39 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.6.1",
+    "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
-    "expo": "^38.0.9",
-    "expo-analytics-segment": "~8.2.1",
-    "expo-image-picker": "~8.3.0",
-    "expo-media-library": "~8.2.1",
-    "expo-splash-screen": "^0.3.1",
-    "expo-sqlite": "~8.2.1",
+    "expo": "^39.0.5",
+    "expo-analytics-segment": "~9.0.0",
+    "expo-cellular": "~2.3.0",
+    "expo-image-picker": "~9.1.1",
+    "expo-media-library": "~9.2.1",
+    "expo-splash-screen": "~0.6.2",
+    "expo-sqlite": "~8.4.0",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native": "0.63.2",
     "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-get-random-values": "^1.5.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-shadow": "^1.2.2",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "short-number": "^1.0.7"
+    "short-number": "^1.0.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
