--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
     "expo": "^39.0.5",
+    "expo-ads-facebook": "~8.4.0",
     "expo-analytics-segment": "~9.0.0",
     "expo-cellular": "~2.3.0",
     "expo-image-picker": "~9.1.1",
     "expo-media-library": "~9.2.1",
+    "expo-random": "~9.0.0",
     "expo-splash-screen": "~0.6.2",
     "expo-sqlite": "~8.4.0",
     "expo-status-bar": "^1.0.2",
