--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.7.2",
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.7.1",
+    "d3": "^6.7.0",
     "expo": "^39.0.5",
     "expo-ads-facebook": "~8.4.0",
     "expo-analytics-segment": "~9.0.0",
@@ -38,7 +39,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
