--- a/package.json
+++ b/package.json
@@ -9,46 +9,48 @@
     "build": "expo build:android -t app-bundle"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "3.0.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.7.2",
+    "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.7.1",
-    "@react-navigation/stack": "^5.7.1",
+    "@react-navigation/stack": "^5.14.4",
     "d3": "^6.7.0",
-    "expo": "^39.0.5",
-    "expo-ads-facebook": "~8.4.0",
-    "expo-analytics-segment": "~9.0.0",
-    "expo-cellular": "~2.3.0",
-    "expo-image-picker": "~9.1.1",
-    "expo-media-library": "~9.2.1",
-    "expo-random": "~9.0.0",
-    "expo-splash-screen": "~0.6.2",
-    "expo-sqlite": "~8.4.0",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^41.0.0",
+    "expo-ads-facebook": "~10.0.4",
+    "expo-analytics-segment": "~10.1.1",
+    "expo-cellular": "~3.1.0",
+    "expo-image-picker": "~10.1.4",
+    "expo-media-library": "~12.0.2",
+    "expo-random": "~11.1.2",
+    "expo-splash-screen": "~0.10.2",
+    "expo-sqlite": "~9.1.0",
+    "expo-status-bar": "~1.0.4",
+    "lodash": "^4.17.21",
     "moment": "^2.27.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "0.63.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-get-random-values": "^1.5.0",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "~0.11.7",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "short-number": "^1.0.7",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0",
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0",
     "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
