--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "build": "expo build:android -t app-bundle"
+
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "3.2.0",
@@ -16,7 +17,7 @@
     "@react-navigation/native": "^5.7.1",
     "@react-navigation/stack": "^5.14.4",
     "d3": "^6.7.0",
-    "expo": "^41.0.0",
+    "expo": "^41.0.1",
     "expo-ads-facebook": "~10.0.4",
     "expo-analytics-segment": "~10.1.1",
     "expo-cellular": "~3.1.0",
@@ -33,6 +34,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
+    "react-native-device-info": "^8.1.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-lightbox": "^0.8.1",
