--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "expo-ads-facebook": "~10.1.2",
     "expo-analytics-segment": "~10.2.1",
     "expo-cellular": "~3.2.0",
+    "expo-cli": "^4.12.8",
+    "expo-facebook": "~11.3.1",
     "expo-image-picker": "~10.2.2",
     "expo-media-library": "~12.1.2",
     "expo-random": "~11.2.0",
