--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "build": "expo build:android -t app-bundle"
@@ -32,7 +31,7 @@
     "moment": "^2.27.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "~0.63.4",
     "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
     "react-native-device-info": "^8.1.3",
@@ -49,12 +48,16 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "short-number": "^1.0.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "expo-updates": "~0.8.1",
+    "react-native-unimodules": "0.14.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "babel-preset-expo": "8.3.0",
     "react-native-svg-transformer": "^0.14.3"
   },
-  "private": true
+  "private": true,
+  "name": "yip",
+  "version": "1.0.0"
 }
