--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "expo build:android -t app-bundle"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
@@ -27,6 +29,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-sqlite": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.1",
     "lodash": "^4.17.21",
     "moment": "^2.27.0",
     "react": "16.13.1",
@@ -35,22 +38,23 @@
     "react-native-chart-kit": "^6.6.1",
     "react-native-daterange-picker": "^1.3.0",
     "react-native-device-info": "^8.1.3",
+    "react-native-fbsdk-next": "^4.6.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "~1.7.0",
     "react-native-lightbox": "^0.8.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.2.0",
+    "react-native-redash": "^16.2.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-shadow": "^1.2.2",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-unimodules": "0.14.10",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "short-number": "^1.0.7",
-    "uuid": "^8.3.2",
-    "expo-updates": "~0.8.1",
-    "react-native-unimodules": "0.14.10"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
